spec: Add sample generator code using OpenSSL
Add sample generator code to the specification.  The code is
compile-tested as part of the build.

The use of Pygments for code highlighting requires LyX 2.3 or newer.
The document must also be authorised to run external commands: this
can be done via

  Document -> Settings -> Formats -> Allow running external programs

The CI pipeline installs the latest LyX release (since Ubuntu does not
yet ship version 2.3) and authorises the document by directly creating
the relevant entry in a new ~/.lyx/session file.

Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,7 +10,16 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v1
       - name: Install packages
-        run: sudo apt install -y lyx
+        run: |
+          sudo apt install -y software-properties-common
+          sudo add-apt-repository -y ppa:lyx-devel/release
+          sudo apt install -y lyx texlive-latex-extra python3-pygments \
+                            make gcc libssl-dev
+      - name: Configure LyX
+        run: |
+          mkdir ~/.lyx
+          echo "[shell escape files]" > ~/.lyx/session
+          echo "$(pwd)/spec/cx.lyx,1" >> ~/.lyx/session
       - name: Build
         run: make -C spec
       - name: Publish
