--- a/spec/Makefile
+++ b/spec/Makefile
@@ -1,9 +1,16 @@
 DEPS = cx.bib
 
-all : cx.pdf
+all : test doc
+
+test : gen_sample.o
+
+doc : cx.pdf
 
 %.pdf : %.lyx $(DEPS) Makefile
 	lyx -e pdf2 $<
 
+%.o : %.c
+	$(CC) -W -Wall -Wextra -Werror -Wno-unused -o $@ -c $<
+
 clean :
-	$(RM) *.pdf
+	$(RM) *.pdf *.o
