spec: Verify that sample generator code passes the NIST test vectors
Ensure that the sample generator code (as included within the
specification document) is correctly implementing the claimed DRBGs,
by comparing its output against two of the NIST CTR_DRBG test vectors
as downloaded from

https://csrc.nist.gov/CSRC/media/Projects/Cryptographic-Standards-and-Guidelines/documents/examples/CTR_DRBG_withDF.pdf

Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/spec/Makefile
+++ b/spec/Makefile
@@ -2,7 +2,8 @@ DEPS = cx.bib
 
 all : test doc
 
-test : gen_sample.o
+test : gen_sample.o gen_test
+	./gen_test
 
 doc : cx.pdf
 
@@ -11,6 +12,9 @@ doc : cx.pdf
 
 %.o : %.c
 	$(CC) -W -Wall -Wextra -Werror -Wno-unused -o $@ -c $<
+
+gen_test : gen_test.c gen_sample.c
+	$(CC) -W -Wall -Wextra -Werror -Wno-unused -o $@ $< -lssl -lcrypto
 
 clean :
 	$(RM) *.pdf *.o
