--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -11,10 +11,12 @@ jobs:
         uses: actions/checkout@v1
       - name: Install packages
         run: |
-          sudo apt install -y software-properties-common
+          sudo apt install -y -o Acquire::Retries=50 \
+                           software-properties-common
           sudo add-apt-repository -y ppa:lyx-devel/release
-          sudo apt install -y lyx texlive-latex-extra python3-pygments \
-                            make gcc libssl-dev
+          sudo apt install -y -o Acquire::Retries=50 \
+                           lyx texlive-latex-extra python3-pygments \
+                           make gcc libssl-dev
       - name: Configure LyX
         run: |
           mkdir ~/.lyx
