spec: Remove "gen_test" binary as part of "make clean"
Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/spec/Makefile
+++ b/spec/Makefile
@@ -18,4 +18,4 @@ gen_test : gen_test.c gen_sample.c
 	$(CC) $(CFLAGS) -o $@ $< -lssl -lcrypto
 
 clean :
-	$(RM) *.pdf *.o
+	$(RM) *.pdf *.o gen_test
