spec: Include generator test vectors
Include generator test vector values within the specification
document.  The build process verifies that the sample code (also
included within the specification document) generates outputs matching
the test vectors.

Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/spec/Makefile
+++ b/spec/Makefile
@@ -14,7 +14,9 @@ doc : cx.pdf
 %.o : %.c
 	$(CC) $(CFLAGS) -o $@ -c $<
 
-gen_test : gen_test.c gen_sample.c
+gen_test : gen_test.c gen_sample.c \
+	   gen_type1_test1.c gen_type1_test2.c \
+	   gen_type2_test1.c gen_type2_test2.c
 	$(CC) $(CFLAGS) -o $@ $< -lssl -lcrypto
 
 clean :
