--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -22,10 +22,36 @@ jobs:
           mkdir ~/.lyx
           echo "[shell escape files]" > ~/.lyx/session
           echo "$(pwd)/spec/cx.lyx,1" >> ~/.lyx/session
-      - name: Build
-        run: make -C spec
-      - name: Publish
+      - name: Check for release version
+        if: startsWith(github.event.ref, 'refs/tags/v')
+        run: |
+          echo "::set-env name=RELEASE_VERSION::${GITHUB_REF/refs\/tags\/v/}"
+      - name: Build and test
+        run: |
+          make -C spec VERSION=${RELEASE_VERSION}
+      - name: Upload build artifacts
         uses: actions/upload-artifact@v1
         with:
           name: cx.pdf
           path: spec/cx.pdf
+      - name: Create release
+        id: create_release
+        if: env.RELEASE_VERSION
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Version ${{ env.RELEASE_VERSION }}
+          draft: false
+          prerelease: false
+      - name: Upload release assets
+        if: env.RELEASE_VERSION
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: spec/cx.pdf
+          asset_name: cx.pdf
+          asset_content_type: application/pdf
