--- a/spec/Makefile
+++ b/spec/Makefile
@@ -1,4 +1,7 @@
-DEPS = cx.bib
+LISTINGS = gen_sample.c \
+	   gen_type1_test1.c gen_type1_test2.c \
+	   gen_type2_test1.c gen_type2_test2.c
+DEPS = cx.bib $(LISTINGS)
 CFLAGS = -W -Wall -Wextra -Werror -Wno-unused-parameter
 
 all : test doc
@@ -14,9 +17,7 @@ doc : cx.pdf
 %.o : %.c
 	$(CC) $(CFLAGS) -o $@ -c $<
 
-gen_test : gen_test.c gen_sample.c \
-	   gen_type1_test1.c gen_type1_test2.c \
-	   gen_type2_test1.c gen_type2_test2.c
+gen_test : gen_test.c $(LISTINGS)
 	$(CC) $(CFLAGS) -o $@ $< -lssl -lcrypto
 
 clean :
