spec: Add sample seed calculator code using OpenSSL
Add sample seed caculator code to the specification.  The code is
compile-tested as part of the build.

Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/spec/Makefile
+++ b/spec/Makefile
@@ -6,7 +6,7 @@ CFLAGS = -W -Wall -Wextra -Werror -Wno-unused-parameter
 
 all : test doc
 
-test : gen_sample.o gen_test
+test : gen_sample.o gen_test seedcalc_sample.o
 	./gen_test
 
 doc : cx.pdf
