spec: Include seed calculator test vectors
Include seed calculator test vector values within the specification
document.  The build process verifies that the sample code (also
included within the specification document) generates outputs matching
the test vectors.

Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/spec/Makefile
+++ b/spec/Makefile
@@ -1,13 +1,23 @@
-LISTINGS = gen_sample.c \
+GEN_DEPS = gen_sample.c \
 	   gen_type1_test1.c gen_type1_test2.c \
 	   gen_type2_test1.c gen_type2_test2.c
-DEPS = cx.bib $(LISTINGS)
+
+SEEDCALC_DEPS = seedcalc_sample.c \
+		seedcalc_type1_test1.c seedcalc_type1_test2.c \
+		seedcalc_type1_test3.c \
+		seedcalc_type2_test1.c seedcalc_type2_test2.c \
+		seedcalc_type2_test3.c \
+		ipxe.pubkey.c fensystems.pubkey.c
+
+DEPS = cx.bib $(GEN_DEPS) $(SEEDCALC_DEPS)
+
 CFLAGS = -W -Wall -Wextra -Werror -Wno-unused-parameter
 
 all : test doc
 
-test : gen_sample.o gen_test seedcalc_sample.o
+test : gen_sample.o gen_test seedcalc_sample.o seedcalc_test
 	./gen_test
+	./seedcalc_test
 
 doc : cx.pdf
 
@@ -20,11 +30,20 @@ version.tex :
 %.o : %.c
 	$(CC) $(CFLAGS) -o $@ -c $<
 
-gen_test : gen_test.c $(LISTINGS)
+%.pubkey.der : %.pubkey.pem
+	openssl rsa -pubin -in $< -outform DER -out $@
+
+%.c : %.der
+	xxd -i $< > $@
+
+gen_test : gen_test.c $(GEN_DEPS)
+	$(CC) $(CFLAGS) -o $@ $< -lssl -lcrypto
+
+seedcalc_test : seedcalc_test.c $(SEEDCALC_DEPS)
 	$(CC) $(CFLAGS) -o $@ $< -lssl -lcrypto
 
 clean :
-	$(RM) *.pdf *.o gen_test
+	$(RM) *.pdf *.o *.der *.pubkey.c gen_test seedcalc_test
 	/bin/echo '\newcommand{\cxVersion}{}' > version.tex
 
 .PHONY : version.tex
