spec: Create first draft of Seed Report functionality
Add a specification of Seed Reports.  This includes an ASN.1 module
included as an Appendix and several ASN.1 fragments included inline
within the relevant sections.

The build process verifies that the fragments match the overall ASN.1
module, and that the ASN.1 module can be compiled using asn1c.

Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/spec/Makefile
+++ b/spec/Makefile
@@ -9,15 +9,17 @@ SEEDCALC_DEPS = seedcalc_sample.c \
 		seedcalc_type2_test3.c \
 		ipxe.pubkey.c fensystems.pubkey.c
 
+ASN1_FRAGS = cx-generatortype.asn1 cx-seedreportversion.asn1 \
+	     cx-preseedvalue-preseedvalues.asn1 cx-tbsseedreport.asn1 \
+	     cx-seedreport.asn1
+
 DEPS = cx.bib $(GEN_DEPS) $(SEEDCALC_DEPS)
 
 CFLAGS = -W -Wall -Wextra -Werror -Wno-unused-parameter
 
 all : test doc
 
-test : gen_sample.o gen_test seedcalc_sample.o seedcalc_test
-	./gen_test
-	./seedcalc_test
+test : test-samples test-asn1
 
 doc : cx.pdf
 
@@ -26,6 +28,10 @@ version.tex :
 
 %.pdf : %.lyx version.tex $(DEPS) Makefile
 	lyx -e pdf2 $<
+
+test-samples : gen_sample.o gen_test seedcalc_sample.o seedcalc_test
+	./gen_test
+	./seedcalc_test
 
 %.o : %.c
 	$(CC) $(CFLAGS) -o $@ -c $<
@@ -41,6 +47,17 @@ gen_test : gen_test.c $(GEN_DEPS)
 
 seedcalc_test : seedcalc_test.c $(SEEDCALC_DEPS)
 	$(CC) $(CFLAGS) -o $@ $< -lssl -lcrypto
+
+test-asn1 : $(patsubst %,%.check,$(ASN1_FRAGS))
+	asn1c -EF cx.asn1 rfc5280.asn1 > /dev/null
+
+cx-%.asn1.check : cx.asn1
+	sed -E -n '/^($(subst -,|,$*)) ::=/I,/^$$/p' $< | diff $(basename $@) -
+
+cx-%.asn1 : cx.asn1
+	sed -E -n '/^($(subst -,|,$*)) ::=/I,/^$$/p' $< > $@
+
+.PRECIOUS : cx-%.asn1
 
 clean :
 	$(RM) *.pdf *.o *.der *.pubkey.c gen_test seedcalc_test
