--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -16,7 +16,7 @@ jobs:
           sudo add-apt-repository -y ppa:lyx-devel/release
           sudo apt install -y -o Acquire::Retries=50 \
                            lyx cm-super texlive-latex-extra python3-pygments \
-                           make gcc libssl-dev
+                           make gcc libssl-dev asn1c
       - name: Configure LyX
         run: |
           mkdir ~/.lyx
