--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -16,12 +16,16 @@ jobs:
           sudo add-apt-repository -y ppa:lyx-devel/release
           sudo apt install -y -o Acquire::Retries=50 \
                            lyx cm-super texlive-latex-extra python3-pygments \
-                           make gcc libssl-dev asn1c
+                           make gcc libssl-dev asn1c librsvg2-bin
       - name: Configure LyX
         run: |
           mkdir ~/.lyx
           echo "[shell escape files]" > ~/.lyx/session
           echo "$(pwd)/spec/cx.lyx,1" >> ~/.lyx/session
+          echo "Format 24" > ~/.lyx/preferences
+          echo '\converter "svg" "pdf6" ' \
+                          '"rsvg-convert -f pdf -o $$o $$r/$$f" ""' \
+                >> ~/.lyx/preferences
       - name: Check for release version
         if: startsWith(github.event.ref, 'refs/tags/v')
         run: |
