--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
-def spongy_castle_version = '1.58.0.0'
+def material_version = '1.1.0'
 
 android {
     compileSdkVersion 29
@@ -34,6 +34,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "com.google.android.material:material:$material_version"
+
+    implementation "com.madgag.spongycastle:core:$spongy_castle_version"
+    implementation "com.madgag.spongycastle:prov:$spongy_castle_version"
 
     testImplementation 'junit:junit:4.12'
 
