spec: Refactor SeedReport layout to allow for easier key rotation
Refactor the Seed Report layout to allow the Advertiser to generate a
new Preseed Key Pair for each new Seed Value.  This eliminates the
difficulties of determining when a Preseed Key Pair can safely be
discarded.

Clarify the expected behaviour when a Seed Report is received for a
Seed Value that has already been seen in a previous Seed Report.

Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/spec/Makefile
+++ b/spec/Makefile
@@ -9,12 +9,22 @@ SEEDCALC_DEPS = seedcalc_sample.c \
 		seedcalc_type2_test3.c \
 		ipxe.pubkey.c fensystems.pubkey.c
 
-ASN1_FRAGS = cx-generatortype.asn1 cx-seedreportversion.asn1 \
-	     cx-preseedvalue--preseedvalues.asn1 cx-tbsseedreport.asn1 \
-	     cx-seedreport.asn1 cx-extension--extensions.asn1 \
-	     cx-tbspublicationdata.asn1 cx-publicationversion.asn1 \
-	     cx-publicationaudience.asn1 cx-notification.asn1 \
-	     cx-alertlevel.asn1 cx-seedvalues.asn1 \
+ASN1_FRAGS = cx-generatortype.asn1 \
+	     cx-extension--extensions.asn1 \
+	     cx-seedreportversion.asn1 \
+	     cx-seeddescriptor.asn1 \
+	     cx-seeddescriptor--seeddescriptors.asn1 \
+	     cx-tbsseedreport.asn1 \
+	     cx-signaturevalue--signaturevalues.asn1 \
+	     cx-seedreport.asn1 \
+	     cx-publicationversion.asn1 \
+	     cx-publicationaudience.asn1 \
+	     cx-alertlevel.asn1 \
+	     cx-seedvalues.asn1 \
+	     cx-notification.asn1 \
+	     cx-notification--notifications.asn1 \
+	     cx-updateurl--updateurls.asn1 \
+	     cx-tbspublicationdata.asn1 \
 	     cx-id-ct-cx-publicationdata--publicationcontentinfo.asn1
 
 DEPS = cx.bib $(GEN_DEPS) $(SEEDCALC_DEPS)
