doc: Rename advertising.{svg,png} to broadcasting.{svg,png}
Rename the image advertising.{svg,png} since it tends to trigger
advertising blockers.

Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/spec/Makefile
+++ b/spec/Makefile
@@ -56,7 +56,7 @@ cx-intro.md : cx.md Makefile
 	rsvg-convert -f png -d 150 -o $@ $<
 
 ../README.md : README-header.md.part cx-intro.md README-footer.md.part \
-	       ../advertising.png ../observing.png ../diagnosis.png \
+	       ../broadcasting.png ../observing.png ../diagnosis.png \
 	       ../publication.png ../international.png Makefile
 	cat README-header.md.part cx-intro.md README-footer.md.part > $@
 
