c: Add autotools-based build system to build a shared library
Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/c/.gitignore
+++ b/c/.gitignore
@@ -1,1 +1,18 @@
+/m4
+/aclocal.m4
+/autom4te.cache
+/build-aux
+/configure
+/config.h.in
+/config.h
+/config.log
+/config.status
+/libtool
+/stamp-h1
+.deps/
+.libs/
+Makefile.in
+Makefile
 *.o
+*.lo
+*.la
