c: Add self-tests using specification-defined test vectors
Add self-tests run as part of "make check" using the test vectors
included in the specification.

Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/c/Makefile.am
+++ b/c/Makefile.am
@@ -1,3 +1,9 @@
 ACLOCAL_AMFLAGS = -I m4
+
 SUBDIRS = src
-EXTRA_DIST = autogen.sh
+
+EXTRA_DIST = autogen.sh \
+	     src/tests/gen_type1_test1.c \
+	     src/tests/gen_type1_test2.c \
+	     src/tests/gen_type2_test1.c \
+	     src/tests/gen_type2_test2.c
