--- a/c/Makefile.am
+++ b/c/Makefile.am
@@ -6,4 +6,10 @@ EXTRA_DIST = autogen.sh \
 	     src/tests/gen_type1_test1.c \
 	     src/tests/gen_type1_test2.c \
 	     src/tests/gen_type2_test1.c \
-	     src/tests/gen_type2_test2.c
+	     src/tests/gen_type2_test2.c \
+	     src/tests/seedcalc_type1_test1.c \
+	     src/tests/seedcalc_type1_test2.c \
+	     src/tests/seedcalc_type1_test3.c \
+	     src/tests/seedcalc_type2_test1.c \
+	     src/tests/seedcalc_type2_test2.c \
+	     src/tests/seedcalc_type2_test3.c
