c: Add missing key_{a,b}.pem files to EXTRA_DIST
Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/c/Makefile.am
+++ b/c/Makefile.am
@@ -12,4 +12,6 @@ EXTRA_DIST = autogen.sh \
 	     src/tests/seedcalc_type1_test3.c \
 	     src/tests/seedcalc_type2_test1.c \
 	     src/tests/seedcalc_type2_test2.c \
-	     src/tests/seedcalc_type2_test3.c
+	     src/tests/seedcalc_type2_test3.c \
+	     src/tests/key_a.pem \
+	     src/tests/key_b.pem
