--- a/c/Makefile.am
+++ b/c/Makefile.am
@@ -3,6 +3,7 @@ ACLOCAL_AMFLAGS = -I m4
 SUBDIRS = src include
 
 EXTRA_DIST = autogen.sh \
+	     cx.pc.in \
 	     src/tests/gen_type1_test1.c \
 	     src/tests/gen_type1_test2.c \
 	     src/tests/gen_type2_test1.c \
@@ -15,3 +16,6 @@ EXTRA_DIST = autogen.sh \
 	     src/tests/seedcalc_type2_test3.c \
 	     src/tests/key_a.pem \
 	     src/tests/key_b.pem
+
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = cx.pc
