--- a/c/include/Makefile.am
+++ b/c/include/Makefile.am
@@ -1,3 +1,3 @@
 libcxdir = $(includedir)
 
-nobase_libcx_HEADERS = cx.h cx/drbg.h cx/generator.h cx/seedcalc.h
+nobase_libcx_HEADERS = cx.h cx/drbg.h cx/generator.h cx/seedcalc.h cx/preseed.h
