c: Add preseed value and key generation self-tests
There are no known-answer tests for preseed value or key generation,
but we can at least exercise the code paths and check that the return
values are usable and (via Valgrind) that no memory leaks occur.

Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/c/src/Makefile.am
+++ b/c/src/Makefile.am
@@ -11,7 +11,10 @@ libcx_la_SOURCES = debug.h drbg.c generator.c seedcalc.c preseed.c
 libcx_la_CPPFLAGS = $(SSL_CFLAGS) $(AM_CPPFLAGS)
 libcx_la_LIBADD = $(SSL_LIBS)
 
-cxtest_SOURCES = cxtest.c gentest.h gentest.c seedcalctest.h seedcalctest.c
+cxtest_SOURCES = cxtest.c \
+		 gentest.h gentest.c \
+		 seedcalctest.h seedcalctest.c \
+		 preseedtest.h preseedtest.c
 cxtest_CPPFLAGS = $(SSL_CFLAGS) $(AM_CPPFLAGS)
 cxtest_CFLAGS = $(AM_CFLAGS) -Wunused-const-variable=2
 cxtest_LDADD = libcx.la $(SSL_LIBS)
