c: Build static library as position-independent code
Allow libcx to be linked statically into a shared library, thereby
simplifying the deployment of external language bindings that cannot
easily rely upon finding a system installation of libcx.

Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/c/configure.ac
+++ b/c/configure.ac
@@ -17,7 +17,7 @@ AS_IF([test x"$XXD_PROG" != x"yes"],
       [AC_MSG_ERROR([Please install xxd])])
 
 # Configure libtool
-LT_INIT([shared])
+LT_INIT([shared pic-only])
 
 # Configure automake
 AM_INIT_AUTOMAKE([foreign subdir-objects])
