--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -25,10 +25,10 @@ jobs:
         working-directory: python
         run: |
           python3 setup.py sdist
-      - name: Upload sdist
+      - name: Upload distribution
         uses: actions/upload-artifact@v1
         with:
-          name: python-sdist
+          name: python-dist
           path: python/dist
 
   sdist:
@@ -40,13 +40,13 @@ jobs:
         run: |
           sudo apt install -y -o Acquire::Retries=50 \
                            python3-pip python3-setuptools
-      - name: Download sdist
+      - name: Download distribution
         uses: actions/download-artifact@v1
         with:
-          name: python-sdist
+          name: python-dist
       - name: Install
         run: |
-          sudo pip3 install python-sdist/libcx-*.tar.gz
+          sudo pip3 install python-dist/libcx-*.tar.gz
       - name: Usage test
         run: |
           python3 -I -c 'import libcx'
@@ -59,13 +59,13 @@ jobs:
       - name: Prerequisites
         run: |
           sudo apt install -y -o Acquire::Retries=50 python3-setuptools
-      - name: Download sdist
+      - name: Download distribution
         uses: actions/download-artifact@v1
         with:
-          name: python-sdist
+          name: python-dist
       - name: Unpack
         run: |
-          tar xvzf python-sdist/libcx-*.tar.gz
+          tar xvzf python-dist/libcx-*.tar.gz
           ln -s libcx-* python
       - name: Install C library
         working-directory: python/dist-libcx
@@ -86,3 +86,23 @@ jobs:
       - name: Usage test
         run: |
           python3 -I -c 'import libcx'
+
+  pypi:
+    name: Publish
+    runs-on: ubuntu-latest
+    needs:
+      - devel
+      - sdist
+      - sdist-extlibcx
+    steps:
+      - name: Download distribution
+        uses: actions/download-artifact@v1
+        with:
+          name: python-dist
+      - name: Publish to PyPI
+        if: startsWith(github.event.ref, 'refs/tags/python-')
+        uses: pypa/gh-action-pypi-publish@master
+        with:
+          packages_dir: python-dist/
+          user: __token__
+          password: ${{ secrets.PYPI_PASSWORD }}
