c: Declare test vector files as standard automake sources
Declare the test vector source files (used verbatim from the
specification document) as standard automake sources, rather than as
EXTRA_DIST files that are not dependency-tracked.

This requires removing the "static" declarations and ensuring that
variable names are unique within the test vector files.

Declare the public key .c files as sources and compute the list of
.pem files from this, since automake will not expand $(patsubst) when
generating Makefile rules.

Remove the use of BUILT_SOURCES, since the compilation of the public
key .c files is no longer invisible to automake.

Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/c/src/Makefile.am
+++ b/c/src/Makefile.am
@@ -11,25 +11,40 @@ libcx_la_SOURCES = debug.h drbg.c generator.c seedcalc.c preseed.c
 libcx_la_CPPFLAGS = $(SSL_CFLAGS) $(AM_CPPFLAGS)
 libcx_la_LIBADD = $(SSL_LIBS)
 
-cxtest_SOURCES = cxtest.c \
+PUBKEY_SOURCES = tests/key_a.c tests/key_b.c
+PUBKEY_PEM = $(patsubst %.c,%.pem,$(PUBKEY_SOURCES))
+
+TEST_SOURCES = tests/gen_type1_test1.c \
+	       tests/gen_type1_test2.c \
+	       tests/gen_type2_test1.c \
+	       tests/gen_type2_test2.c \
+	       tests/seedcalc_type1_test1.c \
+	       tests/seedcalc_type1_test2.c \
+	       tests/seedcalc_type1_test3.c \
+	       tests/seedcalc_type2_test1.c \
+	       tests/seedcalc_type2_test2.c \
+	       tests/seedcalc_type2_test3.c \
+	       $(PUBKEY_SOURCES)
+
+cxtest_SOURCES = cxtest.h cxtest.c \
 		 gentest.h gentest.c \
 		 seedcalctest.h seedcalctest.c \
 		 preseedtest.h preseedtest.c \
-		 $(PUBKEY_C)
-cxtest_CPPFLAGS = $(SSL_CFLAGS) $(AM_CPPFLAGS)
+		 $(TEST_SOURCES)
+cxtest_CPPFLAGS = $(SSL_CFLAGS) -include cxtest.h $(AM_CPPFLAGS)
 cxtest_CFLAGS = $(AM_CFLAGS) -Wunused-const-variable=2
 cxtest_LDADD = libcx.la $(SSL_LIBS)
 
-EXTRA_DIST = linktest.c
-
-PUBKEY_PEM = tests/key_a.pem tests/key_b.pem
-PUBKEY_DER = $(patsubst %.pem,%.der,$(PUBKEY_PEM))
-PUBKEY_C = $(patsubst %.pem,%.c,$(PUBKEY_PEM))
-BUILT_SOURCES = $(PUBKEY_C)
-CLEANFILES = $(PUBKEY_C) $(PUBKEY_DER)
+EXTRA_DIST = linktest.c $(PUBKEY_PEM)
 
 $(srcdir)/tests/key_%.der : $(srcdir)/tests/key_%.pem
 	openssl rsa -pubin -in $< -outform DER -out $@
 
 $(srcdir)/tests/key_%.c : $(srcdir)/tests/key_%.der
 	( cd $(dir $<) && xxd -i $(notdir $<) ) > $@
+
+mostlyclean-local:
+	$(RM) tests/*.der
+
+maintainer-clean-local:
+	$(RM) tests/key_*.c
