c: Add ASN.1 abstractions for seed reports
Add an ASN.1 abstraction layer for seed reports, using the OpenSSL
ASN.1 framework.

The OpenSSL ASN.1 framework is easier to work with than the code
autogenerated using asn1c, and allows us to utilise functions such as
ASN1_item_sign() in order to create a signature over an object that
includes a signatureAlgorithm, with the signatureAlgorithm being
populated as part of the call to ASN1_item_sign().

Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/c/include/Makefile.am
+++ b/c/include/Makefile.am
@@ -1,3 +1,4 @@
 libcxdir = $(includedir)
 
-nobase_libcx_HEADERS = cx.h cx/drbg.h cx/generator.h cx/seedcalc.h cx/preseed.h
+nobase_libcx_HEADERS = cx.h cx/drbg.h cx/generator.h cx/seedcalc.h \
+		       cx/preseed.h cx/asn1.h
