--- a/c/include/Makefile.am
+++ b/c/include/Makefile.am
@@ -1,4 +1,4 @@
 libcxdir = $(includedir)
 
 nobase_libcx_HEADERS = cx.h cx/drbg.h cx/generator.h cx/seedcalc.h \
-		       cx/preseed.h cx/asn1.h
+		       cx/preseed.h cx/asn1.h cx/seedrep.h
