--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -14,10 +14,10 @@ jobs:
         run: |
           sudo apt install -y -o Acquire::Retries=50 \
                            autoconf-archive openssl xxd asn1c \
-                           python3-pip python3-setuptools \
+                           python3-pip python3-setuptools python3-cffi \
                            python3-coverage python3-pycodestyle \
-                           python3-flake8 pylint3
-          sudo pip3 install Cython
+                           python3-flake8
+          sudo pip3 install pylint
       - name: Test
         working-directory: python
         run: |
