ci: Submit Python coverage report to codecov.io
Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -22,6 +22,10 @@ jobs:
         working-directory: python
         run: |
           ./test.sh
+      - name: Coverage report
+        uses: codecov/codecov-action@v1
+        with:
+          file: python/coverage.xml
       - name: Source distribution
         working-directory: python
         run: |
