c: Add proof-of-concept JNI library
Add a JNI library capable of exposing the generator function call API
via Java static methods.

Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/.github/workflows/coverity.yml
+++ b/.github/workflows/coverity.yml
@@ -18,7 +18,8 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y -o Acquire::Retries=50 \
-                           autoconf-archive valgrind openssl xxd asn1c
+                           autoconf-archive valgrind openssl xxd asn1c \
+                           openjdk-11-jdk
       - name: Download Coverity Scan build tool
         run: |
           curl --form token=${{ secrets.COVERITY_SCAN_TOKEN }} \
@@ -35,7 +36,7 @@ jobs:
           make
           make distdir VERSION=scan
           cd libcx-scan
-          ./configure
+          ./configure --enable-jni
       - name: Build via Coverity Scan
         working-directory: c/libcx-scan
         run: |
