--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -13,7 +13,8 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y -o Acquire::Retries=50 \
-                           autoconf-archive valgrind openssl xxd asn1c
+                           autoconf-archive valgrind openssl xxd asn1c \
+                           openjdk-11-jdk
       - name: Autotools
         working-directory: c
         run: |
@@ -21,7 +22,7 @@ jobs:
       - name: Configure
         working-directory: c
         run: |
-          ./configure
+          ./configure --enable-jni
       - name: Build
         working-directory: c
         run: |
